@@ -1,4 +1,6 @@
 <unreleased> Jim Winstead <jimw@mysql.com> (4.01)
+* Explicitly initialize the MySQL client library to avoid possible race
+  conditions in a multithreaded application. (Bug #21792)
 * Fix warning when no connection attributes are passed to the connect
   method (Bug #17323, reported by Phil Randal)
 * Removed redundant warnings when commit or rollback is called while
